* TODO: Add option to dump full request/response output to a file by client
* TODO: review cookie handling. Not always sent automatically. 
* TODO: review :variables in URI elements
* TODO: global responses
* TODO: request block conditions. 
* TODO: process templates for calls to set in get blocks


#### 0.8.4 (2010-03-??) ###############################

* FIXED: There was no response body in Stella::Engine::Log objects
* CHANGE: Store URIs as strings in Stella::Engine::Log objects
* ADDED: Testrun#end_time, Testrun#running?
* ADDED: Testrun.elapsed_seconds

#### 0.8.3 (2010-03-15) ###############################

* FIXED: Testrun digest handling
* FIXED: Testrun.id will be converted to a Gibbler::Digest if it's a String. 
* FIXED: Reconstituting Testrun from a hash (samples and stats)
* CHANGE: Removed dashes from CLI params: notemplate, nostats, nowait, withheader, withparam
* CHANGE: Engine is now called via Testrun#run
* CHANGE: Use the ID attribute (e.g. Testplan.id) instead of digest or digest_cache (which only
  be used once to generate an ID 
* ADDED: Testrun#client_options
* ADDED: Reconstituting Stella::Testrun and Stella::Testplan objects from JSON/Hash
* ADDED: Testrun objects are now frozen after the run
* ADDED: Testrun#userid, Testrun#runinfo
* ADDED: Default Testrun status is "new"
* ADDED: Testrun#run now accepts an options hash which is passed to Engine#run
* ADDED: Engine option: with_content (populate Testrun#log during a load test)
* ADDED: First batch of requests store header content (for load tests)


#### 0.8.2 (2010-03-05) ###############################

* FIXED: Misc issues with usage via module (Stella::Engine.load)
* FIXED: ANSI code method stubs only created when Drydock not available
* CHANGE: Remove all logs except summary and exceptions
* CHANGE: Renamed .stella/logs/latest/request-exceptions to .stella/logs/latest/exceptions
* CHANGE: Removed unused Load implementations and renamed LoadQueue to Load